--- a/GROUP_03.cydsn/BRIDGE_CONTROL_PANEL_CONFIG_FILES/GROUP_03.ini
+++ b/GROUP_03.cydsn/BRIDGE_CONTROL_PANEL_CONFIG_FILES/GROUP_03.ini
@@ -1,27 +1,27 @@
 [VARIABLES_SETTINGS]
 PACKET=1
-SCROLL=50
+SCROLL=1000
 AXIS_X_TYPE=1
 AUTO_RANGE_OF_AXIS_Y=1
 AXIS_Y_MIN=0
-AXIS_Y_MAX=5000
+AXIS_Y_MAX=500
 SHOW_FLAGS=0
 AMPLITUDE=10
 THICKNESS=1
 VARIABLES=32
 Var1.Number=1
 Var1.Active=True
-Var1.VariableName=LDR
+Var1.VariableName=ldr
 Var1.Type=int
-Var1.Sign=True
+Var1.Sign=False
 Var1.Scale=1
 Var1.Offset=0
-Var1.Color=Black
+Var1.Color=Green
 Var2.Number=2
 Var2.Active=True
-Var2.VariableName=TMP
+Var2.VariableName=tmp
 Var2.Type=int
-Var2.Sign=True
+Var2.Sign=False
 Var2.Scale=1
 Var2.Offset=0
 Var2.Color=Blue
@@ -269,7 +269,7 @@ Var32.Color=Gray
 FLAGS=16
 Flag1.Number=1
 Flag1.Active=False
-Flag1.VariableName=Key4
+Flag1.VariableName=pot
 Flag1.FlagName=gf0
 Flag1.BitMask=00000000
 Flag1.Inversion=False
@@ -278,7 +278,7 @@ Flag1.Position=0
 Flag1.Color=Blue
 Flag2.Number=2
 Flag2.Active=False
-Flag2.VariableName=Key4
+Flag2.VariableName=pot
 Flag2.FlagName=gf1
 Flag2.BitMask=00000000
 Flag2.Inversion=False
@@ -287,7 +287,7 @@ Flag2.Position=0
 Flag2.Color=BlueViolet
 Flag3.Number=3
 Flag3.Active=False
-Flag3.VariableName=Key4
+Flag3.VariableName=pot
 Flag3.FlagName=gf2
 Flag3.BitMask=00000000
 Flag3.Inversion=False
@@ -296,7 +296,7 @@ Flag3.Position=0
 Flag3.Color=Chocolate
 Flag4.Number=4
 Flag4.Active=False
-Flag4.VariableName=Key4
+Flag4.VariableName=pot
 Flag4.FlagName=gf3
 Flag4.BitMask=00000000
 Flag4.Inversion=False
@@ -305,7 +305,7 @@ Flag4.Position=0
 Flag4.Color=Gray
 Flag5.Number=5
 Flag5.Active=False
-Flag5.VariableName=Key4
+Flag5.VariableName=pot
 Flag5.FlagName=gf4
 Flag5.BitMask=00000000
 Flag5.Inversion=False
@@ -314,7 +314,7 @@ Flag5.Position=0
 Flag5.Color=Green
 Flag6.Number=6
 Flag6.Active=False
-Flag6.VariableName=Key4
+Flag6.VariableName=pot
 Flag6.FlagName=gf5
 Flag6.BitMask=00000000
 Flag6.Inversion=False
@@ -323,7 +323,7 @@ Flag6.Position=0
 Flag6.Color=LawnGreen
 Flag7.Number=7
 Flag7.Active=False
-Flag7.VariableName=Key4
+Flag7.VariableName=pot
 Flag7.FlagName=gf6
 Flag7.BitMask=00000000
 Flag7.Inversion=False
@@ -332,7 +332,7 @@ Flag7.Position=0
 Flag7.Color=Lime
 Flag8.Number=8
 Flag8.Active=False
-Flag8.VariableName=Key4
+Flag8.VariableName=pot
 Flag8.FlagName=gf7
 Flag8.BitMask=00000000
 Flag8.Inversion=False
@@ -341,7 +341,7 @@ Flag8.Position=0
 Flag8.Color=Magenta
 Flag9.Number=9
 Flag9.Active=False
-Flag9.VariableName=Key4
+Flag9.VariableName=pot
 Flag9.FlagName=gf8
 Flag9.BitMask=00000000
 Flag9.Inversion=False
@@ -350,7 +350,7 @@ Flag9.Position=0
 Flag9.Color=Maroon
 Flag10.Number=10
 Flag10.Active=False
-Flag10.VariableName=Key4
+Flag10.VariableName=pot
 Flag10.FlagName=gf9
 Flag10.BitMask=00000000
 Flag10.Inversion=False
@@ -359,7 +359,7 @@ Flag10.Position=0
 Flag10.Color=MidnightBlue
 Flag11.Number=11
 Flag11.Active=False
-Flag11.VariableName=Key4
+Flag11.VariableName=pot
 Flag11.FlagName=gfA
 Flag11.BitMask=00000000
 Flag11.Inversion=False
@@ -368,7 +368,7 @@ Flag11.Position=0
 Flag11.Color=Olive
 Flag12.Number=12
 Flag12.Active=False
-Flag12.VariableName=Key4
+Flag12.VariableName=pot
 Flag12.FlagName=gfB
 Flag12.BitMask=00000000
 Flag12.Inversion=False
@@ -377,7 +377,7 @@ Flag12.Position=0
 Flag12.Color=Orange
 Flag13.Number=13
 Flag13.Active=False
-Flag13.VariableName=Key4
+Flag13.VariableName=pot
 Flag13.FlagName=gfC
 Flag13.BitMask=00000000
 Flag13.Inversion=False
@@ -386,7 +386,7 @@ Flag13.Position=0
 Flag13.Color=OrangeRed
 Flag14.Number=14
 Flag14.Active=False
-Flag14.VariableName=Key4
+Flag14.VariableName=pot
 Flag14.FlagName=gfD
 Flag14.BitMask=00000000
 Flag14.Inversion=False
@@ -395,7 +395,7 @@ Flag14.Position=0
 Flag14.Color=Purple
 Flag15.Number=15
 Flag15.Active=False
-Flag15.VariableName=Key4
+Flag15.VariableName=pot
 Flag15.FlagName=gfE
 Flag15.BitMask=00000000
 Flag15.Inversion=False
@@ -404,7 +404,7 @@ Flag15.Position=0
 Flag15.Color=Red
 Flag16.Number=16
 Flag16.Active=False
-Flag16.VariableName=Key4
+Flag16.VariableName=pot
 Flag16.FlagName=gfF
 Flag16.BitMask=00000000
 Flag16.Inversion=False
